--- a/src/components/content/message-list/messageList.scss
+++ b/src/components/content/message-list/messageList.scss
@@ -206,3 +206,7 @@
  .messages-contact-pane {
    display: flex;
  }
+
+.contact-message-list {
+  padding-right: 15px!important;
+}
